--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url("/static/img/bg1.jpg") no-repeat;
+    background: url("/static/img/bg1.jpg") no-repeat center fixed;
     background-size: cover;
 }
 
