--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,30 +7,37 @@ body{
     background-size: cover;
 }
 
+
 .login-box{
-    width: 280px;
+    visibility: visible;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background: rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,1);
     color: white;
 }
 
+
 .login-box h1{
-    float: left;
+    text-align: center;
     font-size: 40px;
-    border-bottom: 6px solid #bc6565;
-    margin-bottom: 50px;
+    border-bottom: 6px solid #4684b1;
+    margin-bottom: 30px;
+    margin-left: 25%;
+    margin-right: 25%;
     padding: 13px 0;
 }
 
 .textbox{
-    width: 100%;
+    width: 80%;
     overflow: hidden;
     font-size: 20px;
     padding: 8px 0;
     margin: 8px 0;
     border-bottom: 1px solid #4684b1;
+    margin-left: 25px;
 }
 
 .textbox i{
@@ -45,18 +52,40 @@ body{
     background: none;
     color: white;
     font-size: 18px;
-    width: 80%;
+    width: 75%;
     float: left;
     margin: 0 10px;
 }
 
 .btn{
-    width: 100%;
+    width: 80%;
     background: none;
     border: 2px solid #4684b1;
     color: white;
     padding: 5px;
     font-size: 18px;
     cursor: pointer;
-    margin: 12px 0;
+    margin: 10px 0;
+    margin-left: 25px;
+}
+
+.create-user{
+    visibility: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,1);
+    color: white;
+}
+
+.create-user h1{
+    text-align: center;
+    font-size: 25px;
+    border-bottom: 6px solid #4684b1;
+    margin-bottom: 30px;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 13px 0;
 }
