create user and store in database

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -35,7 +35,7 @@
                 <i class="fa fa-key" aria-hidden="true"></i>
                 <input type="password" placeholder="Password" name="user_password" value="">
             </div>
-            <input class= "btn" type="submit" name="" value="Submit">
+            <input class= "btn" type="submit" name="create_click" value="Create Account">
             <input class= "btn" type="button" name="" value="Back" onclick="gotoLogin()">
             </form>
         </div>
