Fixed create account fields

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -26,10 +26,26 @@
         <div id="createUser" class="create-user">
             <h1>Create User</h1>
             <form  method="POST">
+                
             <div class="textbox">
-                <i class="fa fa-user-secret" aria-hidden="true"></i>
-                <input type="text" placeholder="Username" name="user_name" value="">
+                 <i class="fa fa-tag" aria-hidden="true"></i>
+                <input type="text" placeholder="Firstname" name="first_name" value="">
+            </div>    
+                
+            <div class="textbox">
+                <i class="fa fa-tags" aria-hidden="true"></i>
+                <input type="text" placeholder="Lastname" name="last_name" value="">
+            </div> 
+                
+            <div class="textbox">
+                <i class="fa fa-id-card-o" aria-hidden="true"></i>
+                <input type="text" placeholder="Employee ID" name="emp_id" value="">
             </div>
+                
+            <div class="textbox">
+                <i class="fa fa-street-view" aria-hidden="true"></i>
+                <input type="text" placeholder="Role" name="role" value="">
+            </div> 
             
             <div class="textbox">
                 <i class="fa fa-key" aria-hidden="true"></i>
