--- a/menu/templates/index_menu.html
+++ b/menu/templates/index_menu.html
@@ -1,1 +1,9 @@
-<h1>Menu </h1>                 
+<!DOCTYPE HTML>
+<html>
+	{% load static %}
+	<link rel="stylesheet" href="{% static '/css/menu.css' %}">
+    <body>
+        <h1 id="tmp">MENU</h1>
+        <input id="clearUsersInDatabase" type="button" value="Clear Users">
+    </body>
+</html>
