Correcting login info

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -39,7 +39,7 @@
                 
             <div class="textbox">
                 <i class="fa fa-id-card-o" aria-hidden="true"></i>
-                <input type="text" placeholder="Employee ID" name="emp_id" value="">
+                <input type="text" placeholder="Employee ID" name="employee_id" value="">
             </div>
                 
             <div class="textbox">
