--- a/menu/templates/index_menu.html
+++ b/menu/templates/index_menu.html
@@ -1,9 +1,13 @@
 <!DOCTYPE HTML>
 <html>
+    <head>
+        <title>Menu</title>
+    </head>
 	{% load static %}
 	<link rel="stylesheet" href="{% static '/css/menu.css' %}">
     <body>
         <h1 id="tmp">MENU</h1>
+	<div>
         <form method="POST">
         <input id="clearUsersInDatabase" type="submit" name='clear_db' value="Clear Users">
         </form>
