Begun adding client side functionality, the checkValid method (incomplete) with comments describing purpose going forward

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -69,7 +69,13 @@
                 document.getElementById("createUser").style.visibility = "hidden";
                 document.getElementById("login").style.visibility = "visible";
             }
-            
+	    function checkValid()
+	    {
+	    	//this method will check the validity of the create account / login entries
+		//
+		//	The error checking in this method will consist of type checking and will give
+		//	the appropiate pop up notification if the entry is incorrect.
+	    }
             
         </script>
     </body>
