--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -11,7 +11,7 @@
             <form  method="POST">
             <div class="textbox">
                 <i class="fa fa-user-secret" aria-hidden="true"></i>
-                <input type="text" placeholder="Username" name="user_name" value="">
+                <input type="text" placeholder="Username" name="employee_id" value="">
             </div>
             
             <div class="textbox">
