--- a/menu/templates/index_menu.html
+++ b/menu/templates/index_menu.html
@@ -5,6 +5,7 @@
     </head>
 	{% load static %}
 	<link rel="stylesheet" href="{% static '/css/menu.css' %}">
+    <script type="text/javascript" src="{% static 'scripts/index_menu.js' %}" defer></script>
     <body>
         <h1 id="tmp">MENU</h1>
 	<div>
@@ -23,22 +24,5 @@
             </div>
         </div>
 
-    <script>
-    	
-    	document.addEventListener('DOMContentLoaded', clickHandling);
-
-    	function clickHandling() {
-    		document.getElementById("startTransaction").addEventListener('click', displayError);
-    		document.getElementById("viewProducts").addEventListener('click', displayError);
-    		document.getElementById("createEmployee").addEventListener('click', displayError);
-    		document.getElementById("salesReport").addEventListener('click', displayError);
-    		document.getElementById("cashierReport").addEventListener('click', displayError);
-    	}
-
-    	function displayError() {
-    		alert("Functionality has not been implemented yet.");
-    	}
-
-    </script>
     </body>
 </html>
