Added user info when logged in. The animations are not finished

--- a/menu/templates/index_menu.html
+++ b/menu/templates/index_menu.html
@@ -6,15 +6,28 @@
 	{% load static %}
 	<link rel="stylesheet" href="{% static '/css/menu.css' %}">
     <body>
+        <nav>
+        <div class="info">
+            <div class="account">
+                <button>Account</button>
+                <ul>
+                    <li><a href="#">firstname lastname</a></li>
+                    <li><a href="#">employeeid</a></li>
+                    <li><a href="#">role</a></li>
+                    <li><a href="#">Logout</a></li>
+                </ul>
+            </div>
+        </div>
+        </nav>
+    
         <h1 id="tmp">MENU</h1>
-	<div>
         <form method="POST">
         <input id="clearUsersInDatabase" type="submit" name='clear_db' value="Clear Users">
         </form>
         <div class="container">
             <div class="cashier_buttons">
-                <button class="cashier_button" id="startTransaction">Start</br>Transaction</button>
-                <button class="cashier_button" id="viewProducts">View</br>Products</button>
+                <button class="cashier_button" id="startTransaction">Start<br>Transaction</button>
+                <button class="cashier_button" id="viewProducts">View<br>Products</button>
             </div>
             <div class="manager_buttons">
                 <button class="manager_button" id="createEmployee">Create Employee</button>
