--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -1,6 +1,77 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
 body {
     background-color: bisque;
 }
+
+.info {
+    height: 10vh;
+    background-color: bisque;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 80%;
+    margin: auto;
+}
+
+
+
+.account {
+    position: relative;
+}
+
+
+.account ul{
+    position: absolute;
+    margin-top: 10px;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    list-style: none;
+    border-radius: 5px;
+    /*pointer-events: none;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: all 0.4s ease;*/
+}
+
+
+.account li{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(224, 212, 198);
+}
+
+/*.account li:hover {
+    background-color: rgb(224, 212, 198);
+}*/
+
+.account a {
+    color: black;
+    text-decoration: none;
+}
+
+.info button{
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/*.account button:focus + ul{
+    /*opacity: 1;
+    pointer-events: all;
+    transform: translateY(0px);
+}*/
 
 .container {
     visibility: visible;
@@ -19,6 +90,7 @@ body {
     margin: 30px;
     width: 800px;
     height: 400px;
+    cursor: pointer;
 }
 
 .cashier_button {
@@ -28,11 +100,13 @@ body {
     margin: 10px;
     width: 340px;
     height: 380px;
+    cursor: pointer;
 }
 
 .manager_buttons {
     display: inline-block;
     position: relative;
+    cursor: pointer;
 }
 
 .manager_button {
@@ -41,13 +115,19 @@ body {
     width: 233px;
     height: 200px;
     font-size: 20px;
+    cursor: pointer;
 }
 
 #clearUsersInDatabase {
     position: fixed;
-    top: 0;
-    right: 0;
+    bottom: 200px;
+    left: 0;
     background-color: #1389c7;
-    border: 2px black;
+    border: 1px solid black;
     border-radius: 25px;
 }
+
+#tmp {
+    text-align: center;
+}
+
