--- a/menu/templates/index_menu.html
+++ b/menu/templates/index_menu.html
@@ -15,9 +15,7 @@
                     <li><a>{{first_name}} {{last_name}}</a></li>
                     <li><a>{{employee_id}}</a></li>
                     <li><a>{{role}}</a></li>
-                    <form method="POST">
-                        <li><button type="submit" name="logout_click">Logout</a></li>
-                    </form>
+                        <li><button name="logout_click" onclick="logout_click()">Logout</a></li>
                 </ul>
             </div>
         </div>
