Made CSS classes such that they could be used based on page's context

--- a/menu/templates/index_menu.html
+++ b/menu/templates/index_menu.html
@@ -29,13 +29,13 @@
         </form>
         <div class="container">
             <div class="cashier_buttons">
-                <button class="cashier_button" id="startTransaction">Start<br>Transaction</button>
-                <button class="cashier_button" id="viewProducts">View<br>Products</button>
+                <button class="GMcashier_button" id="startTransaction">Start<br>Transaction</button>
+                <button class="GMcashier_button" id="viewProducts">View<br>Products</button>
             </div>
             <div class="manager_buttons">
-                <button class="manager_button" id="createEmployee">Create Employee</button>
-                <button class="manager_button" id="salesReport">Sales Report</button>
-                <button class="manager_button" id="cashierReport">Cashier Report</button>
+                <button class="GMmanager_button" id="createEmployee">Create Employee</button>
+                <button class="GMmanager_button" id="salesReport">Sales Report</button>
+                <button class="GMmanager_button" id="cashierReport">Cashier Report</button>
             </div>
         </div>
 
