--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -94,7 +94,17 @@ body {
 }
 
 /*CSS FOR WHEN MANAGER IS LOGGED IN*/
-.cashier_button {
+.GMcashier_button {
+    display: inline-block;
+    position: relative;
+    font-size: 60px;
+    margin: 10px;
+    width: 340px;
+    height: 380px;
+    cursor: pointer;
+    border-radius: 25px;
+}
+.SMcashier_button {
     display: inline-block;
     position: relative;
     font-size: 60px;
@@ -105,8 +115,8 @@ body {
     border-radius: 25px;
 }
 
-/*CSS FOR WHEN CASHIER IS LOGGED IN
-.cashier_button {
+/*CSS FOR WHEN CASHIER IS LOGGED IN*/
+.CScashier_button {
     display: inline-block;
     position: relative;
     font-size: 60px;
@@ -116,7 +126,7 @@ body {
     cursor: pointer;
     border-radius: 25px;
     transform: translate(-0%, 25%);
-}*/
+}
 
 .manager_buttons {
     display: inline-block;
@@ -125,7 +135,7 @@ body {
 }
 
 /*CSS FOR WHEN MANAGER IS LOGGED IN*/
-.manager_button {
+.GMmanager_button {
     display: inline-block;
     position: relative;
     width: 233px;
@@ -134,9 +144,18 @@ body {
     cursor: pointer;
     border-radius: 25px;
 }
+.SMmanager_button {
+    display: inline-block;
+    position: relative;
+    width: 233px;
+    height: 200px;
+    font-size: 25px;
+    cursor: pointer;
+    border-radius: 25px;
+} 
 
-/*CSS FOR WHEN CASHIER IS LOGGED IN
-.manager_button {
+/*CSS FOR WHEN CASHIER IS LOGGED IN*/
+.CSmanager_button {
     visibility: hidden;
     display: inline-block;
     position: relative;
@@ -144,7 +163,7 @@ body {
     height: 200px;
     font-size: 25px;
     border-radius: 25px;
-}*/
+}
 
 #clearUsersInDatabase {
     position: fixed;
