--- a/menu/templates/index_menu.html
+++ b/menu/templates/index_menu.html
@@ -10,14 +10,13 @@
         <nav>
         <div class="info">
             <div class="account">
-                <button>Account</button>
+                <button id="acc_btn">Account</button>
                 <ul>
                     
                     <li><a>{{first_name}} {{last_name}}</a></li>
                     <li><a>{{employee_id}}</a></li>
                     <li><a>{{role}}</a></li>
                     <li><button type="submit" name="logout_click" onclick="logout_click();">Logout</button></li>
-                    
                 </ul>
             </div>
         </div>
