--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -17,8 +17,6 @@ body {
     margin: auto;
 }
 
-
-
 .account {
     position: relative;
 }
@@ -35,10 +33,10 @@ body {
     flex-direction: column;
     list-style: none;
     border-radius: 5px;
-    /*pointer-events: none;
+    pointer-events: none;
     opacity: 0;
-    transform: translateY(-10px);
-    transition: all 0.4s ease;*/
+    /*transform: translateY(-10px);*/
+    
 }
 
 
@@ -49,7 +47,14 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgb(224, 212, 198);
+    
 }
+
+.account button:focus + ul{
+    pointer-events: all;
+    opacity: 1;
+}
+
 
 /*.account li:hover {
     background-color: rgb(224, 212, 198);
@@ -67,11 +72,7 @@ body {
     cursor: pointer;
 }
 
-/*.account button:focus + ul{
-    /*opacity: 1;
-    pointer-events: all;
-    transform: translateY(0px);
-}*/
+
 
 .container {
     visibility: visible;
@@ -133,7 +134,8 @@ body {
     text-align: center;
 }
 
-.logout {
-    border: 2px solid black;
+#acc_btn {
+    border-bottom: 2px solid black;
+    pointer-events: all;
 }
 
