fixed bugs, rearranged menu

--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
+    {% load static %}
     <head>
         <title>Login Page</title>
-	{% load static %}
-	<link rel="stylesheet" href="{% static '/css/style.css' %}">
+        <link rel="shortcut icon" type="image/png" href="{% static '/img/login_icon_w.png' %}">
     </head>
+	       <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <body>
         <div id="login" class="login-box">
             <h1>Login</h1>
