--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -1,3 +1,4 @@
+@import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 *{
     margin: 0px;
     padding: 0px;
@@ -13,26 +14,28 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 
 .account {
     position: relative;
+    padding: 4px;
+    border-bottom: 1px solid black;
 }
 
 
 .account ul{
     position: absolute;
     margin-top: 10px;
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 45px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
     list-style: none;
-    border-radius: 5px;
+    
     pointer-events: none;
     opacity: 0;
     /*transform: translateY(-10px);*/
@@ -41,12 +44,14 @@ body {
 
 
 .account li{
+    border: 2px solid black;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgb(224, 212, 198);
+    border-radius: 5px;
     
 }
 
@@ -56,13 +61,10 @@ body {
 }
 
 
-/*.account li:hover {
-    background-color: rgb(224, 212, 198);
-}*/
-
 .account a {
     color: black;
     text-decoration: none;
+    font-size: 20px;
 }
 
 .info button{
@@ -123,19 +125,14 @@ body {
 
 #clearUsersInDatabase {
     position: fixed;
-    bottom: 200px;
-    left: 0;
+    bottom: 5%;
+    right: 2%;
     background-color: #1389c7;
     border: 1px solid black;
     border-radius: 25px;
 }
 
-#tmp {
-    text-align: center;
-}
 
-#acc_btn {
-    border-bottom: 2px solid black;
-    pointer-events: all;
-}
+
+
 
