more changes to CSS

--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -93,7 +93,7 @@ body {
     margin: 30px;
     width: 800px;
     height: 400px;
-    cursor: pointer;
+/*    cursor: pointer;*/
 }
 
 /*CSS FOR WHEN MANAGER IS LOGGED IN*/
@@ -134,7 +134,7 @@ body {
 .manager_buttons {
     display: inline-block;
     position: relative;
-    cursor: pointer;
+/*    cursor: pointer;*/
 }
 
 /*CSS FOR WHEN MANAGER IS LOGGED IN*/
